--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "topthink/framework": "5.1.*",
         "topthink/think-captcha": "^2.0",
         "topthink/think-image": "^1.0",
-        "phpmailer/phpmailer": "^6.0"
+        "phpmailer/phpmailer": "^6.0",
+        "league/commonmark": "^0.17.5"
     },
     "autoload": {
         "psr-4": {
